<resources>
    <string name="action">http://localhost:8080/penna/API/</string>
    <string name="profilo">http://localhost:8080/penna/assets/img/profilo/</string>

    <string name="app_name">Sala Giochi</string>
    <string name="main_text">Benvenuto sull\'app del nostro complesso di Sale Giochi.\n\nIn questa app puoi visualizzare le statistiche delle nostre sale sparse in tutte Italia.\n\nLe piattaforme di cui disponiamo nelle nostre sale sono: PlayStation, Xbox e PC.</string>
    <string name="soci">Soci</string>
    <string name="salegiochi">Sale Giochi</string>
    <string name="ddg">Dispositivi</string>
    <string name="salegiochi_info">Sparse in Italia</string>
    <string name="soci_info">Soddisfatti</string>
    <string name="ddg_info">Di cui disponiamo</string>
    <string name="dipendenti_info">Sempre a disposizione per ogni tua esigenza</string>
    <string name="dipendenti">Dipendenti</string>
    <string name="dirigenti">Dirigenti</string>
    <string name="cassieri">Cassieri</string>
    <string name="tecnici">Tecnici</string>
    <string name="statistiche">Statistiche</string>
    <string name="numeroCliente">Cliente Numero</string>
    <string name="punteggio">Punteggio</string>
    <string name="membroDal">Membro Dal</string>
    <string name="email">E-mail</string>
    <string name="stats">Statistiche</string>
    <string name="stats_info">Delle nostre sale</string>
    <string name="generi">Generi</string>
    <string name="dispositivi_richiesti">Console Richieste</string>
    <string name="soci_migliori">Soci migliori</string>
    <string name="soci_pi_fedeli">Soci più fedeli</string>
    <string name="uomo">Uomo</string>
    <string name="donna">Donna</string>
    <string name="pc">PC</string>
    <string name="xbox">Xbox</string>
    <string name="playstation">PlayStation</string>
    <string name="idDipendente">Dipendente</string>
    <string name="salario">Salario</string>
    <string name="inizioTurno">Inizio Turno</string>
    <string name="fineTurno">Fine Turno</string>
    <string name="dirigente">Dirigenza</string>
    <string name="dirige_le_sale">Dirige le seguenti Sale:</string>
    <string name="periodo">Periodo</string>
    <string name="esperienza">Esperienza</string>
    <string name="anni">" anni"</string>
    <string name="cassiere">Cassiere</string>
    <string name="sportello">Sportello</string>
    <string name="salaGiochi">"Sala Giochi</string>
    <string name="specializzazione">Specializzazione</string>
    <string name="riparazioni">Riparazioni</string>
    <string name="tecnico">Tecnico</string>
</resources>